make package ready for testing

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,6 @@
 This Package was Written by:
 
- - Your name <your email>
+ - Okta Fajar Suryani <okta.suryani@techbros.io>
+ - Daffa Barin <daffabarin@gmail.com>
+ - Ridhwan Nashir <ridhwanashir@gmail.com>
+ - Jonas <guterres19dedeus@gmail.com>
