--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,4 @@ This Package was Written by:
  - Okta Fajar Suryani <okta.suryani@techbros.io>
  - Daffa Barin <daffabarin@gmail.com>
  - Ridhwan Nashir <ridhwanashir@gmail.com>
- - Jonas <guterres19dedeus@gmail.com>
+ - Jonas de Deus Guterres <guterres19dedeus@gmail.com>
